Subtract out the reflow hint from aMinChange when re-resolving out-of-flow kids, in case they're not our descendants and need a reflow.  Bug 170644, r+sr=dbaron